# template-fastapi-openai

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml
bftp/: __init__.py  __main__.py  app.py
bftp/agents/: images.py  standard.py
bftp/api/: __init__.py  root.py
bftp/api/routes/: auth.py  oai.py  users.py
bftp/core/: __init__.py  session.py  settings.py
bftp/core/auth/: __init__.py  manager.py  session.py  token.py  utils.py
bftp/data/: __init__.py  messages.py
bftp/data/models/: __init__.py  tokens.py  users.py
bftp/pipes/: sample.py
