[project]
authors = [
    { name = "Joe McCain III", email = "jo3mccain@icloud.com" }
]
description = "FastAPI backend for the BFTP project"
license = "Apache-2.0"
name = "bftp"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.12"

bcrypt = "^4.3.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
matplotlib = "^3.10.1"
openai = "^1.76.0"
pandas = "^2.2.3"
passlib = "^1.7.4"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
python-jose = "^3.4.0"
torch = "^2.7.0"
torchvision = "^0.22.0"
tortoise-orm = "^0.25.0"
uvicorn = "^0.34.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
